<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/material_dynamic_secondary80"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        android:layout_margin="10dp">

        <ImageView
            android:id="@+id/imageViewAvatar"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/avatar" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewMyName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="32dp"
                android:textColor="@color/black"
                android:text="@string/myname" />

            <TextView
                android:id="@+id/textViewPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/phone" />

            <TextView
                android:id="@+id/textViewEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/email" />
            <TextView
                android:id="@+id/textViewAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/adresse" />



        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="32dp"
        android:textColor="@color/black"
        android:text="@string/experience" />

    <ListView
        android:id="@+id/listViewExperiences"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_weight="1"
        tools:listitem="@layout/item_exprerience"
        />
    <TextView
        android:id="@+id/textView2"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="32dp"
        android:textColor="@color/black"
        android:text="@string/formation" />

    <ListView
        android:id="@+id/listViewFormations"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_weight="1"
        tools:listitem="@layout/item_formation"/>

    <com.google.android.material.chip.Chip
        android:id="@+id/buttonCompetence"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comp_tence"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textSize="30dp"
        />




</LinearLayout>
